crates/analyzer/tests/snapshots/errors__call_with_pub_fns.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `pub` not allowed if `__call__` is defined
  ┌─ compile_errors/call_with_pub_fns.fe:8:12
  │  
2 │ ╭     pub fn __call__():
3 │ │         pass
  │ ╰────────────' `__call__` defined here
  · │
8 │       pub fn baz():
  │              ^^^ `baz` can't be public
  │  
  = The `__call__` function replaces the default function dispatcher, which makes `pub` modifiers obsolete.
  = Hint: Remove the `pub` modifier or `__call__` function.

error: `pub` not allowed if `__call__` is defined
   ┌─ compile_errors/call_with_pub_fns.fe:11:12
   │  
 2 │ ╭     pub fn __call__():
 3 │ │         pass
   │ ╰────────────' `__call__` defined here
   · │
11 │       pub fn bing():
   │              ^^^^ `bing` can't be public
   │  
   = The `__call__` function replaces the default function dispatcher, which makes `pub` modifiers obsolete.
   = Hint: Remove the `pub` modifier or `__call__` function.


